Checkin in some initial code, WIP

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-    "name": "felixge.de"
-  , "version": "0.0.0"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.1"
-    , "jade": "0.0.1"
+  "name": "felixge.de",
+  "version": "0.0.0",
+  "private": true,
+  "dependencies": {
+    "express": "2.5.1",
+    "jade": "0.18.0",
+    "less": "1.1.5",
+    "cluster": "0.7.7",
+    "markdown": "0.3.1"
   }
 }
