--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "jade": "0.18.0",
     "less": "1.1.5",
     "cluster": "0.7.7",
-    "markdown": "0.3.1",
     "async": "~0.1.15",
-    "underscore": "~1.2.2"
+    "underscore": "~1.2.2",
+    "discount": "~0.2.2"
   }
 }
