--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ title: "Felix Geisendörfer"
 googleAnalytics: "UA-3306079-13"
 disqusShortname: felixge
 permalinks:
-  posts: /:year/:month/:day/:title/
+  posts: /:year/:month/:day/:slug/
 
 # Keep old jekyll URL for RSS: /posts.atom.xml
 outputFormats:
